# trendsim

./: .gitignore  README.md  all_authors.py  app.py  author_class.py  kafka_export.py  mongo_export.py  pyproject.toml  trendsim_env.yml  utils.py
