[project]
name = "trendsim"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.1.2",
    "kafka>=1.3.5",
    "konoha>=5.5.6",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "panel>=1.4.5",
    "pymongo>=4.10.1",
    "requests>=2.32.3",
]
